--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Your awesome title
-name: Your Name
-email: your-email@example.com
-description: Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
+title: Suzuka Blog
+name: Cheng Gu
+email: gucheng0712@126.com
+description: A Otaku who likes making games and playing games.
 
 baseurl: "/blog"
 url: ""
