--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: "/blog"
 url: ""
 
 parallax_image_one: assets/images/Top.jpg # These are the images used for the parallax background
-parallax_image_two: assets/images/Mid.png
+parallax_image_two: assets/images/Center.png
 
 project_one: "First Project"
 project_one_description: Describe your project!
