--- a/_config.yml
+++ b/_config.yml
@@ -9,27 +9,23 @@ url: ""
 parallax_image_one: assets/images/Top.jpg # These are the images used for the parallax background
 parallax_image_two: assets/images/Center.jpg
 
-project_one: "First Project"
-project_one_description: Describe your project!
-project_one_url: https://github.com/jameshamann/jekyll-material-theme
-project_one_icon: location_on
+project_one: "A Tragedy of Little Chicks P5.js"
+project_one_description: A Game inspired by Snake vs Block. The Chicken Mother wants to save her children and fight with bad animals.
+project_one_url: https://github.com/gucheng0712/A-Tragedy-of-Little-Chicks-P5.js-
 
 project_two: "Second Project"
 project_two_description: Describe your project!
 project_two_url: https://github.com/jameshamann/jekyll-material-theme
-project_two_icon: photo_camera
 
 
 project_three: "Third Project"
 project_three_description: Describe your project!
 project_three_url: https://github.com/jameshamann/jekyll-material-theme
-project_three_icon: hotel
 
 
 project_four: "Fourth Project"
 project_four_description: Describe your project!
 project_four_url: https://github.com/jameshamann/jekyll-material-theme
-project_four_icon: restaurant
 
 
 portfolio_heading: Portfolio
