--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ project_one: "A Tragedy of Little Chicks"
 project_one_description: A Game inspired by Snake vs Block. The Chicken Mother wants to save her children and fight with bad animals.
 project_one_url: https://github.com/gucheng0712/A-Tragedy-of-Little-Chicks-P5.js-
 
-project_two: "Second Project"
-project_two_description: Describe your project!
-project_two_url: https://github.com/jameshamann/jekyll-material-theme
+project_two: "Suzuka-Chan Character Creation"
+project_two_description: This is my first anime character, called Suzuka-Chan made by Blender 
+project_two_url: https://github.com/gucheng0712/Suzuka-chan-Character-Creation
 
 
 project_three: "Third Project"
