--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Suzuka Blog
+title: Suzuka Site
 name: Cheng Gu
 email: gucheng0712@126.com
-description: An Otaku who loves making games and playing games.
+description: An Otaku who loves making and playing games.
 
 baseurl: "/blog"
 url: ""
