--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,7 +1,7 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
 - name:
-    detail: Study at Woodbury University
+    detail: Woodbury University
     i18n: college
   desc:
     detail: At September 2016,I went to Woodbury University majoring Applied Computer Science, and started my IT career.
@@ -13,3 +13,18 @@
     detail: Student
     i18n: college_job
   icon: fa-plus-square
+
+- name:
+    detail: Math & Science Tutoring Center in Woodbury University
+    i18n: companyA
+  desc:
+    detail: At October 2017,I got my first on-campus job, which is tutoring student in the Math and other Science Subjects at Woodbuty University Tutoring Center.
+    i18n: companyA_des
+  date:
+    detail: Oct. 2016
+    i18n: companyA_date
+  job:
+    detail: Tutor
+    i18n: companyA_job
+  icon: fa-plus-square
+  
