--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author:  # change following line to your infomation.
   last_name: Gu  # Be used at index page about me section.
   avatar: /static/assets/img/landing/avatar.jpg  # upload your avatar at directory and edit it.
   github_username: gucheng0712  # Leave blank if you don't have now
-  linkedin_id:  # Leave blank if you don't have now
+  linkedin_id: cheng-gu-0712 # Leave blank if you don't have now
   facebook_username:   # Leave blank if you don't have now
   twitter_username:   # Leave blank if you don't have now
   email: guhceng0712@126.com  # Leave blank if you don't have now
