--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: Computer Graphics, Unity, JavaScript, Machine Learing, Python, Maya, Blender, Photoshop, TouchDesigner
+aspects: Shader, Unity, JavaScript, Machine Learing, Python, Maya, Blender, Photoshop, TouchDesigner
 percentage:  80, 90, 75, 80, 80, 75, 80, 60,80
