--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -6,6 +6,7 @@
   i18n: p1
   gh_user: gucheng0712
   repo: A-Tragedy-of-Little-Chicks-P5.js-
+  demo_url: https://gucheng0712.github.io/A-Tragedy-of-Little-Chicks-P5.js-/
   img: /static/assets/img/landing/P1.png
   desc: A web game Inspired by Snake VS Block. The storyline is The Chicken Mother needs to fight with bad animals for saving her children. First programming project. 
   
@@ -13,13 +14,15 @@
   i18n: p2
   gh_user: gucheng0712
   repo: Suzuka-wants-to-fly
+  demo_url: https://www.bilibili.com/video/av37162427
   img: /static/assets/img/landing/P2.png
   desc: A VR Demo Aimed to reduce the problem of motion sickness, used a third person view Spiderman style swinging game demo to try to discover a new world in visual reality for reducing this adverse consequence. In this Project, I create everything by myself, such as the building blocks, character model, particles, animations, and many game mechanics such as swinging moving, wall walking, battle system, and wall walking. Also, I created an infinite city generator instead of spending time on level design.
   
 - name: Beyond Atlantis -using TouchDesigner & Arduino
   i18n: p3
-  gh_user: gucheng0712
+  gh_user: d
   repo: Beyond-Atlantis
+  demo_url: https://www.bilibili.com/video/av37162148
   img: /static/assets/img/landing/P3.png
   desc: An installation project which used the versatility of projection mapping and the depth of infinity mirrors to show a piece that would inspire curiosity about the wonders, beauty, and unknowns that lie deep beneath the surface of what the human eye can perceive; the deep sea.
   
@@ -27,6 +30,7 @@
   i18n: p4
   gh_user: gucheng0712
   repo: RhythmRPG
+  demo_url: https://www.bilibili.com/video/av37156808
   img: /static/assets/img/landing/P4.png
   desc: An RPG Rhythm Game Demo that collaborated with Game Design & Art Students in the Game Prototype class. Functions Includes Inventory System, Data Saving and Loading, Dialogue, Social Media, Rhythm Gameplay, UI framework, and Storyline, Shopping, Evolving, and so on.
   
@@ -60,6 +64,7 @@
 - name: NeverLand
   i18n: p5
   url: https://www.bilibili.com/video/av37152972
+  demo_url: https://www.bilibili.com/video/av37152972
   img: /static/assets/img/landing/P5.png
   desc: A Level Design and Unity Shader Programming Project for creating a beautiful cartoon environment  
 
