--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: Shader, Unity, JavaScript, Machine Learing, Python, Maya, Blender, Photoshop, TouchDesigner
-percentage:  80, 90, 75, 80, 80, 75, 80, 60,80
+aspects: Shader, Unity, JavaScript, Machine Learing, Python, Maya, Blender, Photoshop, TouchDesigner,Zbrush, Houdini
+percentage:  90, 90, 75, 80, 90, 80, 80, 70, 80, 70, 70
