--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -6,6 +6,7 @@
   i18n: p10
   gh_user: gucheng0712
   repo: WISIWIG
+  url: 
   demo_url: https://www.bilibili.com/video/av52461636
   img: /static/assets/img/landing/P10.png
   desc: An immersive interactive installation technology project that combines visual art and AI to analyzes facial expressions and behaviors for creating interactive works of art and text descriptions.
@@ -14,6 +15,7 @@
   i18n: p4
   gh_user: gucheng0712
   repo: RhythmRPG
+  url: 
   demo_url: https://www.bilibili.com/video/av37156808
   img: /static/assets/img/landing/P4.png
   desc: An RPG Rhythm Game Demo that collaborated with Game Design & Art Students in the Game Prototype class. Functions Includes Inventory System, Data Saving and Loading, Dialogue, Social Media, Rhythm Gameplay, UI framework, and Storyline, Shopping, Evolving, and so on.
@@ -22,6 +24,7 @@
   i18n: p3
   gh_user: gucheng0712
   repo: Beyond-Atlantis
+  url:
   demo_url: https://www.bilibili.com/video/av37162148
   img: /static/assets/img/landing/P3.png
   desc: A group project Inspired by Yayoi Kusama’s Infinity Mirrored room, this project was designed to immerse the user into an infinite sea world just by looking the piece of installation. Use GLSL to write color animations in TouchDesigner and use Serial to collect information in Arduino to synchronize LED color animations while using The versatility of the projection map and the depth of the infinite mirror to show a piece of work.
@@ -30,6 +33,7 @@
   i18n: p2
   gh_user: gucheng0712
   repo: Suzuka-wants-to-fly
+  url:
   demo_url: https://www.bilibili.com/video/av37162427
   img: /static/assets/img/landing/P2.png
   desc: A VR Demo Aimed to reduce the problem of motion sickness, used a third person view Spiderman style swinging game demo to try to discover a new world in visual reality for reducing this adverse consequence. In this Project, I create everything by myself, such as the building blocks, character model, particles, animations, and many game mechanics such as swinging moving, wall walking, battle system, and wall walking. Also, I created an infinite city generator instead of spending time on level design.
@@ -37,6 +41,7 @@
 - name: NeverLand - Using Unity & Blender
   i18n: p5
   url: https://www.bilibili.com/video/av37152972
+  url:
   demo_url: https://www.bilibili.com/video/av37152972
   img: /static/assets/img/landing/P5.png
   desc: A Level Design and Unity Shader Programming Project for creating a beautiful cartoon environment.
@@ -44,6 +49,8 @@
 - name: CatBox - using Unity & Node.js & Vuforia
   i18n: p8
   gh_user: gucheng0712
+  url:
+  demo_url:
   repo: CatBox-MultiPlayerAR
   img: /static/assets/img/landing/P8.png
   desc: A Multiplayer AR Game, aimed to create an interactive game which will be like a combination of a marker based “Poké mon Go” Game and Flag Capturing style game. A competitive game that makes players choose a team and try their best to collect the markers around the campus for better score. 
@@ -51,6 +58,7 @@
 - name: Animated Led Sign - using Arduino & P5.js
   i18n: p7
   gh_user: gucheng0712
+  url:
   repo: Animated-LED-Sign
   demo_url: https://www.bilibili.com/video/av48173868
   img: /static/assets/img/landing/P7.png
@@ -59,6 +67,8 @@
 - name: Voice Basketball Machine - using Unity & Waston & Vuforia
   i18n: p9
   gh_user: gucheng0712
+  url:
+  demo_url:
   repo: AR-BasketballMachine
   img: /static/assets/img/landing/P9.png
   desc: An AR basketball shooting game, shoot methods include swap screen and voice command by using Watson API.
@@ -67,12 +77,14 @@
 - name: 3D Props Modelling & Texturing - using Maya & Quixel & Photoshop
   i18n: p6
   url:
+  demo_url:
   img: /static/assets/img/landing/P6.png
   desc: Modeled and Textured some props for the 3D game art fundmental class.
 
 - name: Fancy House Modelling & Texturing & Rendering - using Maya & Substance Designer & Substance Painter
   i18n: p11
   url:
+  demo_url:
   img: /static/assets/img/landing/P11.png
   desc: A Fancy House 3D Creation by using Maya, Substance Deisnger, and Substance Painter. The Reference image is created by an Environmental Artist,OKU in Artstation.  
 
@@ -80,6 +92,7 @@
 - name: A Tragedy of Little Chicks -using P5.js
   i18n: p1
   gh_user: gucheng0712
+  url:
   repo: A-Tragedy-of-Little-Chicks-P5.js-
   demo_url: https://gucheng0712.github.io/A-Tragedy-of-Little-Chicks-P5.js-/
   img: /static/assets/img/landing/P1.png
