--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -28,8 +28,8 @@
 - name: JavaScript
   href: /javascript/
   
-- name: Game Dev
-  href: /game dev/
+- name: Dev Journal
+  href: /dev journal/
   
 
 
