--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -2,7 +2,7 @@
 # If you don't have language feature(language.yml is empty), ignore "i18n" items
 # Suggest projects' img be located at '/static/assets/img/landing', and edit following img items.
 
-- name: WISWYG - using TouchDesigner & Keras & Nltk & Open AI-GPT
+- name: (2019 Spring) WISWYG - using TouchDesigner & Keras & Nltk & Open AI-GPT
   i18n: p10
   gh_user: gucheng0712
   repo: WISIWIG
@@ -11,7 +11,7 @@
   img: /static/assets/img/landing/P10.png
   desc: An immersive interactive installation technology project that combines visual art and AI to analyzes facial expressions and behaviors for creating interactive works of art and text descriptions.
 
-- name: Troubadour - using Unity
+- name: (2018 Fall) Troubadour - using Unity
   i18n: p4
   gh_user: gucheng0712
   repo: RhythmRPG
@@ -20,7 +20,7 @@
   img: /static/assets/img/landing/P4.png
   desc: An RPG Rhythm Game Demo that collaborated with Game Design & Art Students in the Game Prototype class. Functions Includes Inventory System, Data Saving and Loading, Dialogue, Social Media, Rhythm Gameplay, UI framework, and Storyline, Shopping, Evolving, and so on.
   
-- name: Beyond Atlantis -using TouchDesigner & Arduino
+- name: (2017 Fall) Beyond Atlantis -using TouchDesigner & Arduino
   i18n: p3
   gh_user: gucheng0712
   repo: Beyond-Atlantis
@@ -29,7 +29,7 @@
   img: /static/assets/img/landing/P3.png
   desc: A group project Inspired by Yayoi Kusama’s Infinity Mirrored room, this project was designed to immerse the user into an infinite sea world just by looking the piece of installation. Use GLSL to write color animations in TouchDesigner and use Serial to collect information in Arduino to synchronize LED color animations while using The versatility of the projection map and the depth of the infinite mirror to show a piece of work.
 
-- name: Suzuka Wants to Fly (Compatible with VR) -using Unity & HTC Vive
+- name: (2017 Fall) Suzuka Wants to Fly -using Unity & HTC Vive
   i18n: p2
   gh_user: gucheng0712
   repo: Suzuka-wants-to-fly
@@ -38,7 +38,7 @@
   img: /static/assets/img/landing/P2.png
   desc: A VR Demo Aimed to reduce the problem of motion sickness, used a third person view Spiderman style swinging game demo to try to discover a new world in visual reality for reducing this adverse consequence. In this Project, I create everything by myself, such as the building blocks, character model, particles, animations, and many game mechanics such as swinging moving, wall walking, battle system, and wall walking. Also, I created an infinite city generator instead of spending time on level design.
 
-- name: CatBox - using Unity & Node.js & Vuforia
+- name: (2018 Fall) CatBox- using Unity & Node.js & Vuforia
   i18n: p8
   gh_user: gucheng0712
   url:
@@ -47,7 +47,7 @@
   img: /static/assets/img/landing/P8.png
   desc: A Multiplayer AR Game, aimed to create an interactive game which will be like a combination of a marker based “Poké mon Go” Game and Flag Capturing style game. A competitive game that makes players choose a team and try their best to collect the markers around the campus for better score. 
 
-- name: Animated Led Sign - using Arduino & P5.js
+- name: (2017 Fall) Animated Led Sign - using Arduino & P5.js
   i18n: p7
   gh_user: gucheng0712
   url:
@@ -57,7 +57,7 @@
   desc: A group project, making an Animated Led Sign built for our Major Applied Computer Science, be able to send msg through Adafruit and change the Led Animation and the Motor movement states by using the P5.js with Arduino, as well as doing a lot of fabrication works. It was exhibited at 2018 Annual Showcase.
 
 
-- name: Voice Basketball Machine - using Unity & Waston & Vuforia
+- name: (2018 Fall) Voice Basketball Machine - using Unity & Waston & Vuforia
   i18n: p9
   gh_user: gucheng0712
   url:
@@ -66,7 +66,7 @@
   img: /static/assets/img/landing/P9.png
   desc: An AR basketball shooting game, shoot methods include swap screen and voice command by using Watson API.
 
-- name: A Tragedy of Little Chicks -using P5.js
+- name: (2017 Spring) A Tragedy of Little Chicks -using P5.js
   i18n: p1
   gh_user: gucheng0712
   url: https://gucheng0712.github.io/dev%20journal/python/ai/2018/05/12/A-Tragedy-of-Little-Chicks-Dev-Journal.html
@@ -75,49 +75,49 @@
   img: /static/assets/img/landing/P1.png
   desc: A web game Inspired by Snake VS Block. The storyline is The Chicken Mother needs to fight with bad animals for saving her children. First programming project. 
 
-- name: NeverLand - Using Unity & Blender
+- name: (2018 Fall) NeverLand - Using Unity & Blender
   i18n: p5
   url: https://gucheng0712.github.io/dev%20journal/unity/2019/05/12/NeverLand-Dev-Journal.html
   demo_url: https://gucheng0712.github.io/dev%20journal/unity/2019/05/12/NeverLand-Dev-Journal.html 
   img: /static/assets/img/landing/P5.png
   desc: A Level Design and Unity Shader Programming Project for creating a beautiful cartoon environment.
 
-- name: 3D Props - using Maya & Quixel & Photoshop
+- name: (2017 Spring) 3D Props - using Maya & Quixel & Photoshop
   i18n: p6
   url:
   demo_url: https://gucheng0712.github.io/dev%20journal/2017/12/01/3D-Props-Modeling.html
   img: /static/assets/img/landing/P6.png
   desc: 3D Props Modelling for Game Code Fundamental class, Created a Lamp, Old Well, Super Long Hidden Blade, and a Revolving Pistol.
 
-- name: Fancy House - using Maya & Arnold & Substance
+- name: (2019 Fall) Fancy House - using Maya & Arnold & Substance
   i18n: p11
   url:
   demo_url: https://gucheng0712.github.io/dev%20journal/2019/10/01/Fancy-House-Modeling.html
   img: /static/assets/img/landing/P11.png
   desc: A Fancy House 3D Creation by using Maya, and Substance Deisnger. The Reference image is created by an Environmental Artist,OKU in Artstation.  
 
-- name: Kinki Restaurant - Maya & Arnold & Substance
+- name: (2019 Fall) Kinki Restaurant - Maya & Arnold & Substance
   i18n: p12
   url:
   demo_url: temp
   img: /static/assets/img/landing/PlaceHolder.png
   desc: An Interior Modeling, Texturing and Rendering for a Japanese Restaurant Kinki in Maya and Arnold.  
 
-- name: Character Concepts - Photoshop
+- name: (2019) Character Concepts - Photoshop
   i18n: p13
   url:
   demo_url: temp
   img: /static/assets/img/landing/PlaceHolder.png
   desc: Some Character Reference Images I created with Tablet in Photoshop.
 
-- name: Rina -using Maya & Zbrush & MarvelousDesigner & Substance
+- name: (2019) Rina -using Maya & Zbrush & MarvelousDesigner & Substance
   i18n: p14
   url:
   demo_url: temp
   img: /static/assets/img/landing/PlaceHolder.png
   desc: 3D Character Creation in Development.
 
-- name: Combat-Behavior System - Unity & Odin
+- name: (2019) Combat-Behavior System - Unity & Odin
   i18n: p15
   url:
   demo_url: temp
