--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -106,7 +106,7 @@
 - name: (2019) Character Concepts - Photoshop
   i18n: p13
   url:
-  demo_url: temp
+  demo_url: https://gucheng0712.github.io/dev%20journal/2019/10/24/CharacterConcepts.html
   img: /static/assets/img/landing/P13.png
   desc: Some Character Reference Images I created with Tablet in Photoshop.
 
