--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -80,7 +80,7 @@
   url: https://gucheng0712.github.io/dev%20journal/unity/2019/05/12/NeverLand-Dev-Journal.html
   demo_url: https://gucheng0712.github.io/dev%20journal/unity/2019/05/12/NeverLand-Dev-Journal.html 
   img: /static/assets/img/landing/P5.png
-  desc: A Level Design and Unity Shader Programming Project for creating a beautiful cartoon environment.
+  desc: A Level Design Project for creating a stylized realtime cartoon environment, includes Terrain Sculpting, Shader Programming, Particles, and Camera Movement, and Rendering.
 
 - name: (2017 Spring) 3D Props - using Maya & Quixel & Photoshop
   i18n: p6
@@ -103,34 +103,34 @@
   img: /static/assets/img/landing/P12.png
   desc: An Interior Modeling, Texturing and Rendering for a Japanese Restaurant Kinki in Maya and Arnold.  
 
-- name: (2019) Character Concepts - Photoshop
+- name: Character Drawings - Photoshop
   i18n: p13
   url:
   demo_url: https://gucheng0712.github.io/dev%20journal/2019/10/24/CharacterConcepts.html
   img: /static/assets/img/landing/P13.png
-  desc: Some Character Reference Images I created with Tablet in Photoshop.
+  desc: Some Character drawing I created with Tablet in Photoshop on my free time for making 3D Model in the future.
 
-- name: (2019) Rina -using Maya & Zbrush & MarvelousDesigner & Substance
+- name: Rina -using Maya & Zbrush & DAZ & MarvelousDesigner & Substance
   i18n: p14
   url:
   demo_url: temp
-  img: /static/assets/img/landing/PlaceHolder.png
-  desc: 3D Character Creation in Development.
+  img: /static/assets/img/landing/P14.png
+  desc: Using varity of softwares to create a 3D Character based on my character reference drawing on my free time. Haven't textured yet.
 
 - name: (2019-2020) FancyToon - using Unity
-  i18n: p16s
+  i18n: p16
   gh_user: gucheng0712
-  repo: FancyToon
-  url: https://gucheng0712.github.io/unity/dev%20journal/2018/12/05/Troubadour-Dev-Journal.html
-  demo_url: temps
-  img: /static/assets/img/landing/PlaceHolder.png
-  desc: A self-created Toon/Anime Shader for achieving a good looking cartoon rendering. The Features include View and Distance Based Outline, Fully Customized Cartoon Lighting Model based based on Ceil Rendering, View Based Rim Effect, Specular Mask, Custom Shadow Color, Normal Map Support, Stencil Features, MatCap & ShadeCap Support, Multi-Light Support.
+  #repo: FancyToon
+  #url: temp
+  #demo_url: temps
+  img: /static/assets/img/landing/P16.png
+  desc: An indevelopment Toon/Anime Shader project inspried by Mihoyo's NextGen-Toon Rendering presentation. The goal is to achieve a stylized standard looking in cartoon/anime rendering for my character and be optimized in any games. The Features include View and Distance Based Outline, Fully Customized Cartoon Lighting Model based based on Ceil Rendering, View Based Rim Effect, Specular Mask, Custom Shadow Color, Normal Map Support, Stencil Features, MatCap & ShadeCap Support, Multi-Light Support.
   
 
 - name: (2019-2020) Combat-Behavior System - Unity & Odin
   i18n: p15
-  url:
-  demo_url: temp
+  #url:
+  #demo_url: temp
   img: /static/assets/img/landing/PlaceHolder.png
   desc: Combat-Behavior System is a flexible visualized action game creation toolkit will be created as my final year project. The features include Real-time Visualized Node Based Behavior-Tree Editor, customized BehaviorAction EditorWindow, Easily Functions customization, Followed by MVC Design Pattern for separate Model, View, Controller. 
 
