--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -2,6 +2,14 @@
 # If you don't have language feature(language.yml is empty), ignore "i18n" items
 # Suggest projects' img be located at '/static/assets/img/landing', and edit following img items.
 
+- name: (2019 Fall)Rina -using Maya & Zbrush & MarvelousDesigner & Substance
+  i18n: p14
+  url:
+  demo_url: https://gucheng0712.github.io/dev%20journal/2020/01/06/Rina-Creation.html
+  img: /static/assets/img/landing/P14.png
+  desc: A female samurai character creation during my free time. Using many different kinds of software to increase the workflow, includes, Maya, Zbrush, Substance Suites, RizomUV, Photoshop, Marmoset Toolbag, Marvelous Designer.
+
+
 - name: (2019 Spring) WISWYG - using TouchDesigner & Keras & Nltk & Open AI-GPT
   i18n: p10
   gh_user: gucheng0712
@@ -110,12 +118,6 @@
 #   img: /static/assets/img/landing/P13.png
 #   desc: Some Character drawing I created with Tablet in Photoshop on my free time for making 3D Model in the future.
 
-- name: Rina -using Maya & Zbrush & MarvelousDesigner & Substance
-  i18n: p14
-  url:
-  demo_url: https://gucheng0712.github.io/dev%20journal/2020/01/06/Rina-Creation.html
-  img: /static/assets/img/landing/P14.png
-  desc: A female samurai character creation during my free time. Using many different kinds of software to increase the workflow, includes, Maya, Zbrush, Substance Suites, RizomUV, Photoshop, Marmoset Toolbag, Marvelous Designer.
 
 - name: (2019-2020) FancyToon - using Unity
   i18n: p16
