--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -5,14 +5,14 @@
   github: https://github.com/gucheng0712
   email: gucheng0712@126.com
 #
-#- last_name: Donate
-#  first_name: Jalpc
-#  desc: Support Jalpc
-#  website: http://www.jarrekk.com/donate/
-#  email: me@jarrekk.com
+- last_name: 
+ first_name: ZaneZee
+ desc: College Class mate
+ website: https://github.com/ZaneZee
+ email: ZaneZukovsky@gmail.com
 #
-#- last_name: LN
-#  first_name: FN
-#  desc: COO
-#  website: https://github.com
-#  email: coo@google.com
+- last_name: 
+ first_name: Joab
+ desc: College Class mate
+ website: https://github.com/JoabMartinez
+ email: joabmt@gmail.com 
